--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -145,6 +145,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="common.h" />
+    <ClInclude Include="Counter.hpp" />
     <ClInclude Include="cuboid.h" />
     <ClInclude Include="rectangle.h" />
   </ItemGroup>
